Merged PR 32: fl-38-1 All the service covered with unit tests
Related work items: #38